# applica

./: .env  .env.example  .env.prod  README.md  bootstrap.ldif  docker-compose.yml
backend/: .dockerignore  .env  .env.dev  .env.development  Cargo.toml  Dockerfile  bun.lockb  diesel.toml  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  rustfmt.toml  tsconfig.json
backend/migrations/: 20240921094439_fields.up.sql  20240921094444_applications.down.sql  20240921094444_applications.up.sql  20240921094447_applications_fields.down.sql  20240921094447_applications_fields.up.sql
backend/migrations/2024-09-13-204310_create_courses/: up.sql
backend/migrations/2024-09-13-204418_create_applications/: down.sql  up.sql
backend/src/: index.ts  ldap.ts  main.rs  schema.rs
backend/src/common/: db.rs  error.rs  util.ts
backend/src/db/: db.ts  schema.ts
backend/src/db/migrations/: 0000_empty_texas_twister.sql
backend/src/db/migrations/meta/: 0000_snapshot.json  _journal.json
backend/src/db/scripts/: migrate.ts  seed.ts
backend/src/models/: application.rs  application.ts  application_field.rs  auth.ts  course.rs  field.rs  mod.rs
backend/src/routes/: application.rs  application.ts  auth.rs  auth.ts  course.ts  field.ts  index.ts  mod.rs
backend/src/services/: emailService.ts
frontend/: .dockerignore  Dockerfile  bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/assets/: main.css
frontend/app/components/: AppHeader.vue  ApplicationDetailDialog.vue  ConfirmationDialog.vue
frontend/app/composables/: useApi.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: authorized.ts  notAuthorized.ts
frontend/app/pages/: index.vue  login.vue
frontend/app/plugins/: api.ts  auth.ts
frontend/app/stores/: useApplicationsStore.ts  useUserStore.ts
frontend/app/types/: api.schema.ts  api.ts  applicaion.schema.ts  applicaion.ts  auth.ts
(+4 files in other folders)
