[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.88"

axum = { version = "0.7.5", features = ["tracing", "json"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "derive",
    "migrate",
    "chrono"
]}

[[bin]]
name = "backend"
path = "src/main.rs"
